# scope-rf-detr-segmentation

./: .gitignore  README.md  manual_test.py  pyproject.toml
scope_rfdetr_segmentation/: __init__.py  plugin.py
scope_rfdetr_segmentation/pipelines/: __init__.py  pipeline.py  schema.py
